--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -199,6 +199,206 @@ footer {
 .btn-ftr svg{
     height: 24px;
 }
+.sb-notice{
+    font-size: 20px;
+    font-weight: 300;
+}
+
+.sale-banner{
+    background-color: #695DFD;
+    padding: 18px 0;
+}
+.sb-time{
+    font-weight: 500;
+}
+.search-filters-cont{
+    background-color: #1F204F;
+}
+.search-filters{
+    gap: 20px;
+}
+.sf-pill{
+    border-radius: 100px;
+    background-color: rgba(255, 255, 255, 0.2);
+    padding: 8px 20px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 400;
+}
+.sf-pill-close svg{
+    height: 24px;
+    width: 24px;
+}
+
+.product-list-card{
+    display: block;
+    text-decoration: none !important;
+    border-radius: 10px;
+    height: 100%;
+    overflow: hidden;
+    background-color: #1F204F;
+    position: relative;
+}
+.plcb-location{
+    font-size: 14px;
+    font-weight: 300;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+.plc-top{
+    position: relative;
+}
+.plc-pill{
+    padding: 8px 20px;
+    border-radius: 100px;
+    font-size: 12px;
+    font-weight: 400;
+    width: fit-content;
+    object-fit: cover;
+    object-position: center;
+    position: absolute;
+    left: 10px;
+    top: 10px;
+}
+
+.plc-pill-white{
+    background-color: #EEF0FF;
+    color: #161543;
+}
+
+.plc-pill-black{
+    background-color: #13141A;
+    color: #EEF0FF;
+}
+.product-list-row>div{
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.search-sec{
+    padding: 20px 0;
+}
+.plc-img{
+    height: 260px;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+    aspect-ratio: 4/3;
+}
+.csmart-logo{
+    height: 35px;
+    width: 35px;
+    border-radius: 100px;
+    position: absolute;
+    left: 10px;
+    bottom: 10px;
+}
+.grade-badge-cont{
+    position: absolute;
+    bottom: 1px;
+    right: 0;
+    text-align: right;
+    transform: translateY(50%);
+}
+.grade-badge-img{
+    transform: translateX(3px);
+    height: 25px;
+    width: 126px;
+}
+
+.gb-text{
+    font-size: 14px;
+    color: #101044;
+    position: absolute;
+    z-index: 1;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    font-weight: 400;
+}
+
+.plc-bottom{
+    padding: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 13px;
+}
+
+.plcb-name{
+    font-size: 16px;
+    font-weight: 500;
+    color: #ffffff;
+}
+.plcb-details{
+    font-size: 14px;
+    font-size: 200;
+    color: #ffffff;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 7px;
+    align-items: center;
+}
+
+.plcb-circle{
+    height: 4px;
+    width: 4px;
+    display: block;
+    border-radius: 100px;
+    background-color: #ffffff;
+}
+.plc-price-title{
+    font-size: 16px;
+    font-weight: 300;
+}
+.plc-price-amount{
+    margin-left: 5px;
+    font-size: 20px;
+    font-weight: 500;
+}
+.make-logo{
+    border-radius: 100px;
+    height: 24px;
+    width: 24px;
+}
+.plcb-price-cont{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.plcb-price-cont .make-logo{
+    height: 30px;
+    width: 30px;
+}
+
+.plcb-plate-cont{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.plc-plate-number{
+    font-size: 14px;
+    font-weight: 600;
+    color: #000000;
+    padding-right: 10px;
+}
+.plc-num-plate{
+    width: fit-content;
+    gap: 5px;
+    display: flex;
+    align-items: center;
+    border: 2px solid #FFFFFF;
+    background-color: #EEF0FF;
+    border-radius: 2px;
+}
+.plcb-blue{
+    height: 22px;
+    width: 13px;
+    background-color: #3748EA;
+}
 @media (min-width: 1400px) {
 
     .footer-cont {
