--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -567,6 +567,7 @@ footer {
 .products-pagination .page-link{
     height: 32px;
     width: 32px;
+    font-weight: 600;
     background-color: #1F204F;
     border-radius: 4px;
     border: 1px solid transparent;
@@ -662,5 +663,8 @@ footer {
 
     .ft-flex-1 {
         gap: 50px;
+    }
+    .search-filters{
+        gap: 12px;
     }
 }
